--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
-        "esModuleInterop": true,
-        "moduleResolution": "node",
-        "module": "es6"
+      "outDir": "dist",
+      "esModuleInterop": true,
+      "module": "CommonJS",
+      "moduleResolution": "Node",
+      "baseUrl": "src",
     },
     "ts-node": {
-        "esm": true
-    }
-}
+      "esm": true
+    },
+  }
