--- a/package.json
+++ b/package.json
@@ -29,21 +29,20 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.4.0",
     "@types/pg": "^8.6.6",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.4.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "@types/supertest": "^2.0.12",
     "cors": "^2.8.5",
-    "D": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "pg": "^8.8.0",
-    "supertest": "^6.3.3"
+    "pg": "^8.8.0"
   }
 }
