--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^29.4.0",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "dotenv-cli": "^7.0.0",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
