--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
   },
   "homepage": "https://github.com/Laisses/POC-TS-food-review-backend#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.4.0",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
     "dotenv-cli": "^7.0.0",
+    "install": "^0.13.0",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
+    "npm": "^9.4.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
